--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@
     font-style: normal;
 }
 
+.toast-container {
+  background: none;
+}
+
 .auth {
     max-width: 800px;
     margin: 0 auto;
@@ -248,4 +252,8 @@
   justify-content: space-around;
   width: 100%;
   height: 100%;
+}
+
+.mp-fullback {
+  height: 100vh;
 }
